--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
       <artifactId>postgresql</artifactId>
       <version>42.2.20</version>
     </dependency>
+
+    <dependency>
+      <groupId>de.codecentric.centerdevice</groupId>
+      <artifactId>javafxsvg</artifactId>
+      <version>1.3.0</version>
+    </dependency>
   </dependencies>
 
   <build>
